--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
+    "@mui/styled-engine-sc": "^5.12.0",
     "react-burger-menu": "^3.0.9",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "styled-components": "^5.3.11"
   }
 }
